# mcp-server-rust

./: .gitignore  Cargo.toml  MCP-Inspector.md  README.md  run.sh  server.js
src/: lib.rs  main.rs  server.rs
src/prompts/: code_review_prompt.rs  mod.rs
src/resources/: config_resource.rs  file_resource.rs  mod.rs
src/tools/: calculator_tool.rs  greeting_tool.rs  mod.rs  weather_tool.rs
src/transport/: mod.rs  stdio.rs
src/utils/: error.rs  logger.rs  mod.rs
